# final-year-project-melodyyqz

./: .gitignore  CMakeLists.txt  README.md
basic/glassCaustics/: COMP3811-cw1.sln  Makefile  apple-notes.txt  premake5.lua  readme.md
basic/glassCaustics/draw2d/: Makefile  draw.cpp  draw.hpp  draw2d.vcxproj  forward.hpp
basic/glassCaustics/glassCaustics/: Makefile  exercise1.vcxproj  main.cpp
basic/glassCaustics/support/: Makefile  context-oldgl.cpp  context.cpp  support.vcxproj
basic/glassCaustics/vmlib/: vmlib.vcxproj
glassCaustics/: COMP3811-ex4.sln
glassCaustics/assets/: default.frag  default.vert  exercise4-shaders.vcxproj
glassCaustics/exercise4/: cylinder.cpp  exercise4.vcxproj  main.cpp  simple_mesh.cpp
glassCaustics/support/: support.vcxproj
glassCaustics/vmlib/: vmlib.vcxproj
src/: CMakeLists.txt  Camera.cpp  Camera.h  EBO.cpp  KDTree.cpp  KDTree.h  VAO.cpp  VAO.hpp  VBO.cpp  embree_manager.cpp  embree_manager.h  light.h  main.cpp  photon.h  photon_emitter.cpp  photon_emitter.h  scene.h  shader_class.cpp  shader_class.hpp  simple_mesh.cpp  simple_mesh.hpp  texture.cpp  texture.h  texture_generator.cpp  texture_generator.h
src/util/vmlib/: mat22.hpp  mat33.hpp  mat44.cpp  mat44.hpp
